--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"type": "composer-installer",
 	"license":"AGPL-3.0",
 	"autoload": {
-          "psr-0": {"Installer\\Composer": "Composer/"}
+          "psr-0": {"Installer\\Composer\\": "Composer/"}
       },
       "extra": {
           "class": "Installer\\Composer\\RbsChangeInstaller"
